--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ djangorestframework==3.14.0
 markdown==3.6
 django-filter==24.1
 drf-spectacular==0.27.1
+gunicorn==21.2.0
+mysqlclient==2.2.4
+django-environ==0.11.2
+djangorestframework-simplejwt==5.3.1
