--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build:
@@ -25,6 +23,7 @@ services:
     ports:
       - 3306:3306
     command: ["./docker-entrypoint-initdb.d/init-db.sh"]
+    platform: linux/amd64
 
 volumes:
   db_data:
