--- a/production.yml
+++ b/production.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: python manage.py runserver 0.0.0.0:8000
+    command: ./start_django.sh gunicorn pi1back.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
